add initial codes with validations

--- a/src/main/resources/templates/helloworld.html
+++ b/src/main/resources/templates/helloworld.html
@@ -9,6 +9,10 @@
 
 <body>
 
+<h1><span th:text="${message}" class="funny"/></h1>
+
+Student Name: <span th:text="${param.studentName}"></span>
+
 <p th:text="'Time on the server is ' + ${theDate}" class="funny" />
 
 </body>
