--- a/src/main/resources/templates/student-confirmation.html
+++ b/src/main/resources/templates/student-confirmation.html
@@ -12,6 +12,10 @@ The student is confirmed: <span th:text="${student.firstName} + ' ' + ${student.
 <br/><br/>
 Email: <span th:text="${student.email}"/>
 <br/><br/>
+Age: <span th:text="${student.age}"/>
+<br/><br/>
+Postal Code: <span th:text="${student.postalCode}"/>
+<br/><br/>
 Country: <span th:text="${student.country}"/>
 <br/><br/>
 Sex: <span th:text="${student.sex}"/>
@@ -20,5 +24,7 @@ Banks:
 <ul>
    <li th:each="tempBank: ${student.banks}" th:text="${tempBank}"></li>
 </ul>
+<br/><br/>
+Bank Code: <span th:text="${student.bankCode}"/>
 </body>
 </html>
