--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,1 +1,21 @@
-<meta http-equiv="refresh" content="0; URL='students/list'">
+<!--
+<meta http-equiv="refresh" content="0; URL='students/list'">-->
+
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head>
+    <meta charset="UTF-8">
+    <title>ABC School Home Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+<div class="container">
+    <h2>ABC School Home Page</h2>
+    <hr>
+    Welcome to the ABC School home page!
+</div>
+</body>
+</html>
