--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,18 +1,34 @@
+<!--
+<meta http-equiv="refresh" content="0; URL='students/list'">-->
+
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-  <meta charset="UTF-8">
-  <title>ABC School Home Page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>ABC School Home Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
 <div class="container">
-  <h2>ABC School Home Page</h2>
-  <hr>
-  Welcome to the ABC School home page!
+    <h2>ABC School Home Page</h2>
+    <hr>
+    <p>Welcome to the ABC School home page!</p>
+
+    <!-- display username and role -->
+    <p>
+        User: <span sec:authentication="principal.username"></span>
+        <br/><br/>
+        Role(s): <span sec:authentication="principal.authorities"></span>
+    </p>
+
+    <hr>
+    <form action="#" th:action="@{/logout}" method="POST">
+        <input type="submit" value="Logout"/>
+    </form>
 </div>
 </body>
 </html>
