--- a/src/main/resources/templates/students/list-students.html
+++ b/src/main/resources/templates/students/list-students.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
   <meta charset="UTF-8">
@@ -15,12 +16,20 @@
 <div class="container">
   <h3>Student Directory</h3>
   <hr>
+  <p>
+    User: <span sec:authentication="principal.username"></span>
+    <br/>
+    Role(s): <span sec:authentication="principal.authorities"></span>
+  </p>
+  <hr>
 
-  <!-- add button -->
-  <a th:href="@{/students/showFormForAdd}"
-      class="btn btn-primary btn-sm mb-3">
-    Add Student
-  </a>
+  <div sec:authorize="hasAnyRole('MANAGER', 'ADMIN')">
+    <!-- add button -->
+    <a th:href="@{/students/showFormForAdd}"
+        class="btn btn-primary btn-sm mb-3">
+      Add Student
+    </a>
+  </div>
 
   <table class="table table-bordered table-striped">
     <thead class="table-dark">
@@ -28,7 +37,11 @@
         <th>First Name</th>
         <th>Last Name</th>
         <th>Email</th>
-        <th>Action</th>
+        <th>Youtube Channel</th>
+        <th>Hobby</th>
+        <div sec:authorize="hasAnyRole('MANAGER', 'ADMIN')">
+          <th>Action</th>
+        </div>
       </tr>
     </thead>
     <tbody>
@@ -36,20 +49,31 @@
         <td th:text="${tempStudent.firstName}"/>
         <td th:text="${tempStudent.lastName}"/>
         <td th:text="${tempStudent.email}"/>
-        <td>
-          <a th:href="@{/students/showFormForUpdate(studentId=${tempStudent.id})}"
-              class="btn btn-info btn-sm">
-            Update
-          </a>
-          <a th:href="@{/students/delete(studentId=${tempStudent.id})}"
-              class="btn btn-danger btn-sm"
-              onclick="if (!(confirm('Are you sure you want to delete this student?'))) return false">
-            Delete
-          </a>
-        </td>
+        <td th:text="${tempStudent.studentDetail.youtubeChannel}"/>
+        <td th:text="${tempStudent.studentDetail.hobby}"/>
+        <div sec:authorize="hasAnyRole('MANAGER', 'ADMIN')">
+          <td>
+            <a th:href="@{/students/showFormForUpdate(studentId=${tempStudent.id})}"
+                class="btn btn-info btn-sm">
+              Update
+            </a>
+
+            <div sec:authorize="hasRole('ADMIN')" style="display:inline">
+              <a th:href="@{/students/delete(studentId=${tempStudent.id})}"
+                  class="btn btn-danger btn-sm"
+                  onclick="if (!(confirm('Are you sure you want to delete this student?'))) return false">
+                Delete
+              </a>
+            </div>
+          </td>
+        </div>
       </tr>
     </tbody>
   </table>
+
+  <form action="#" th:action="@{/logout}" method="POST">
+    <input type="submit" value="Logout" class="btn btn-outline-dark btn-sm mb-3"/>
+  </form>
 </div>
 
 </body>
