--- a/src/main/resources/templates/students/student-form.html
+++ b/src/main/resources/templates/students/student-form.html
@@ -20,12 +20,18 @@
 
   <form action="#" th:action="@{/students/save}" th:object="${student}" method="POST">
     <input type="hidden" th:field="*{id}"/>
+    <input type="hidden" th:field="*{studentDetail.id}"/>
     <input type="text" th:field="*{firstName}"
            class="form-control mb-4 w-25" placeholder="First name"/>
     <input type="text" th:field="*{lastName}"
            class="form-control mb-4 w-25" placeholder="Last name"/>
     <input type="text" th:field="*{email}"
            class="form-control mb-4 w-25" placeholder="Email"/>
+
+    <input type="text" th:field="*{studentDetail.youtubeChannel}"
+           class="form-control mb-4 w-25" placeholder="Youtube channel"/>
+    <input type="text" th:field="*{studentDetail.hobby}"
+           class="form-control mb-4 w-25" placeholder="Hobby"/>
 
     <button type="submit" class="btn btn-info col-2">Save</button>
   </form>
